<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="390dp"
    android:layout_height="511dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.manish.translinkapp.Activities.MainActivity" >

    <Button
        android:id="@+id/quick_access_btn"
        android:onClick="handleUserChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/quick_access_prompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/next_bus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/next_bus_prompt"
        android:layout_below="@+id/quick_access_btn"
        android:layout_alignStart="@+id/quick_access_btn"
        android:onClick="handleUserChoice"
        android:layout_alignEnd="@+id/quick_access_btn" />

    <Button
        android:id="@+id/plan_trip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/next_bus_btn"
        android:layout_below="@+id/next_bus_btn"
        android:layout_marginTop="59dp"
        android:onClick="handleUserChoice"
        android:text="@string/plan_trip_prompt"
        android:layout_alignEnd="@+id/next_bus_btn" />

</RelativeLayout>
