<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manish.translinkapp.Logic.NextBus">

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:max="10"
        android:progress="3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_stopno_prompt"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/bus_no_display"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_prompt"
        android:onClick="onEnterClick"
        android:layout_alignTop="@+id/stop_no_field"
        android:layout_toEndOf="@+id/stop_no_field"
        android:layout_marginStart="19dp" />

    <EditText
        android:id="@+id/stop_no_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/bus_no_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:id="@+id/save_to_access_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_quick_prompt"
        android:layout_below="@+id/button"
        android:onClick="onSaveClick"
        android:layout_toStartOf="@+id/button" />
</RelativeLayout>
